updated files and fixed bug while trying to fix bug for image not showing on checkout page

--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,8 +1,11 @@
 .checkout {
   display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
 }
 
-.checkout_ad {
+.checkout__ad {
   width: 100%;
   margin-bottom: 10px;
 }
